style.css
body {
    background-color: #f5d9df;
    font-family: "numuto", sans-serif;
}

#main-navbar{
    font-size: 1.5rem;
    font-weight: 100;
}

#main-navbar .navbar-brand {
    color: #ea1c2c;
    font-size: 1.5rem;
}

#main-navbar .nav-link{
    color: #ffffff;
    transition: color 500ms ease-in-out;
}

#main-navbar .nav-link:hover{
    color: #ea1c2c;
    
}

#heading-group span {
    color: #ea1c2c;
}

#heading-group h1{
    font-weight: 100;
    font-size: 3rem;
}

.blurb h2 {
    color: #ea1c2c;
    font-weight: 100;
    font-size: 2.5rem;
}

.blurb p {
    color: #f398b8;
    font-weight: 100;
    font-size: 1.125rem;
    line-height: 2;
}

.content {
    margin-top: 100px;
    margin-bottom: 100px;
}

.navbar-scrolled {
    background-color: #dec0de;
    transition: background 500ms;
}

@media (max-width: 1200px){
    #heading-group h1{
        font-weight: 100;
        font-size: 2rem;
    }
}

